Fix bib / code layout bug https://github.com/alshedivat/al-folio/issues/3370

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -926,6 +926,7 @@ pre {
     border-radius: 0;
     margin-bottom: 0;
     padding: 0;
+    white-space: inherit;
   }
 }
 
